--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "target-spa",
+  "homepage": "https://tgt-spa.github.io/spa/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
